Community: Spacing between member cards (fixes #6227) (#6236)

--- a/src/app/community/community.scss
+++ b/src/app/community/community.scss
@@ -46,7 +46,6 @@ planet-calendar {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   grid-template-rows: repeat(auto-fill, 125px);
-  grid-column-gap: 0.25rem;
   margin: 0 0.5rem;
   .top-right-icon {
     position: absolute;
