--- a/src/styles.scss
+++ b/src/styles.scss
@@ -574,4 +574,10 @@ body {
     grid-column-gap: 0.5rem;
   }
 
+  .card-grid {
+    grid-column-gap: 0.5rem;
+    grid-row-gap: 0.5rem;
+    margin: 0.25rem;
+  }
+
 }
